--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,21 @@
+/* 
+    Fonts
+    ---
+    @font-face declarations
+*/
+
+@font-face {
+  font-family: 'Inter Web';
+  font-weight: 488;
+  src: url(../fonts/Inter-Regular.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter Web';
+  font-weight: 700;
+  src: url(../fonts/Inter-Bold.woff2) format('woff2');
+}
+
 /*
     Elements: Page
     ---
@@ -7,7 +25,8 @@
 html {
   font-size: 16px;
   line-height: 1.5;
-  font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
+  /* font-family: 'Inter Web', 'Helvetica Neue', Helvetica, arial, sans-serif; */
+  font-family: 'droid-serif', 'Helvetica Neue', Helvetica, arial, sans-serif;
   color: #5c6366;
   padding: 48px 24px 24px;
 }
@@ -52,6 +71,7 @@ h1,
 h2,
 h3 {
   color: #171814;
+  font-family: 'Inter Web', 'Helvetica Neue', Helvetica, arial, sans-serif;
 }
 
 h1 {
