--- a/css/screen.css
+++ b/css/screen.css
@@ -29,6 +29,8 @@ html {
   font-family: 'droid-serif', 'Helvetica Neue', Helvetica, arial, sans-serif;
   color: #5c6366;
   padding: 48px 24px 24px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -76,6 +78,7 @@ h3 {
 
 h1 {
   font-size: 36px;
+  font-family: 'Playfair Display', serif;
   line-height: 40px;
   margin: 0 0 24px;
 }
